<resources>
    <string name="app_name">梦想家</string>
    <string name="tab_default">首页</string>

    <string name="nav_recommend">精彩推荐</string>
    <string name="nav_gallery">家居图库</string>
    <string name="nav_inspiration">灵感专题</string>
    <string name="nav_collection">我的收藏</string>
    <string name="nav_about">关于作者</string>
    <string name="nav_setting">设置</string>
    <string name="act_theme_detail">专题详情</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="header_author_name">magical</string>
    <string name="header_author_url">https://github.com/magical-xu</string>
    <string name="furniture_detail_name">家具名称</string>
    <string name="furniture_detail_price">家具价格</string>
    <string name="furniture_go_jump">去商场看看,好不啦？</string>

    <string name="company_introduce">公司介绍</string>
    <string name="no_taobao_link">没有淘宝链接了。。</string>
    <string name="home_hot_topic">热门话题</string>
    <string name="splash_tiyan">立即体验</string>
    <string name="recommend_heart">心</string>
    <string name="recommend_hide">只显示图片的情况</string>
    <string name="collect">收藏</string>


</resources>
